--- a/src/components/homepageNavbar/HomepageNavbar.css
+++ b/src/components/homepageNavbar/HomepageNavbar.css
@@ -17,11 +17,17 @@
 .header__logo--disco-ball {
     height: 32px;
     width: 32px;
-    margin-right: 10px;
+    margin-right: 8px;
 }
 .header__logo--text {
-    color: var(--color--gradient);
+    background-image: linear-gradient(90deg, rgba(30,113,230,1) 0%, rgba(28,131,227,1) 50%, rgba(4,141,215,1) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
     font-family: Ubuntu;
     font-size: 24px;
     line-height: 28px;
+    padding-right: 8px;
 }
