styled the nav options a little

--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,27 @@
   --color--white: #ffffff;
 }
 
+
+
 /* icons */
 .icon--16px {
   height: 16px;
   width: 16px;
 }
-
 .icon--24px {
   height: 24px;
   width: 24px;
+}
+
+/* list items */
+.list-item {
+  padding: 0px 12px;
+  height: 44px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--color--dark-black);
+  text-decoration: none;
 }
 
 /* base styles */
