--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -22,6 +22,12 @@
     cursor: pointer;
     height: 100%;
 }
+.header__logo:hover {
+    opacity: 86%;
+}
+.header__logo:active {
+    opacity: 72%;
+}
 .header__logo--disco-ball {
     height: 32px;
     width: 32px;
@@ -31,7 +37,7 @@
     background-image: linear-gradient(90deg, rgba(30,113,230,1) 0%, rgba(28,131,227,1) 50%, rgba(4,141,215,1) 100%);
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
+    -webkit-text-fill-color: transparent;
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-family: Ubuntu;
@@ -42,4 +48,13 @@
 .header__logo--chevron {
     filter: invert(36%) sepia(20%) saturate(7485%) hue-rotate(204deg) brightness(94%) contrast(90%);
     margin-bottom: -4px;
+}
+
+
+.home__nav-options {
+    border: var(--color--dark-gray) 1px solid;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.08);
+    background-color: var(--color--white);
+    border-radius: 4px;
+    overflow: hidden;
 }
