--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -1,14 +1,13 @@
 .header {
     width: 100%;
     background-color: var(--color--white);
-    height: 50px;
+    height: 64px;
     border-bottom: 1px solid var(--color--dark-gray);
     display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
     top: 0;
-    padding: 8px 0px;
 }
 .header .container--flex {
     height: 100%;
@@ -21,9 +20,6 @@
     justify-content: center;
     cursor: pointer;
     height: 100%;
-}
-.header__logo:hover {
-    opacity: 86%;
 }
 .header__logo:active {
     opacity: 72%;
@@ -53,8 +49,13 @@
 
 .home__nav-options {
     border: var(--color--dark-gray) 1px solid;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.08);
     background-color: var(--color--white);
-    border-radius: 4px;
+    border-radius: 0px 0px 4px 4px;
     overflow: hidden;
+    width: 160px;
+    color: var(--color--dark-black);
+    margin-right: -4px;
+}
+.home__nav-options__check {
+    filter: invert(40%) sepia(82%) saturate(4709%) hue-rotate(206deg) brightness(96%) contrast(88%);
 }
