--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -1,3 +1,4 @@
+/* header */
 .header {
     width: 100%;
     background-color: var(--color--white);
@@ -16,6 +17,9 @@
 }
 
 
+
+
+/* header logo */
 .header__logo {
     display: flex;
     align-items: center;
@@ -23,8 +27,11 @@
     cursor: pointer;
     height: 100%;
 }
+.header__logo:hover {
+    opacity: 92%;
+}
 .header__logo:active {
-    opacity: 72%;
+    opacity: 88%;
 }
 .header__logo--disco-ball {
     height: 32px;
@@ -49,6 +56,9 @@
 }
 
 
+
+
+/* header nav options */
 .header__nav-options {
     border: var(--color--dark-gray) 1px solid;
     background-color: var(--color--white);
@@ -56,8 +66,22 @@
     overflow: hidden;
     width: 160px;
     color: var(--color--dark-black);
-    margin-right: -4px;
+    position: absolute;
+    margin-left: -10px;
+    top: 64px;
 }
 .header__nav-options__check {
     filter: invert(40%) sepia(82%) saturate(4709%) hue-rotate(206deg) brightness(96%) contrast(88%);
 }
+
+
+
+@media screen and (max-width: 599px) and (min-width: 2px) {
+    .header__nav-options {
+      width: 100%;
+      margin-left: 0px;
+      position: absolute;
+      left: 0px;
+      border-radius: 0px;
+    }
+  }
