--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,6 +1,9 @@
 .menu__backdrop {
   height: 100vh;
   width: 100vw;
+  background-color:rgba(0, 0, 0, 0.50);
+  z-index: 50;
+  position: absolute;
 }
 
 
