--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -13,7 +13,7 @@
 .menu {
   height: 100vh;
   background-color: var(--color--white);
-  width: 288px;
+  width: 360px;
   border-left: 1px solid var(--color--dark-gray);
   box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.12);
   position: fixed;
@@ -28,6 +28,8 @@
       border-radius: 16px;
       overflow: hidden;
       width: 288px;
+      padding-top: 4px;
+      border: 1px solid var(--dark-gray)
     }
   }
 
