--- a/src/components/venuesGrid/VenuesGrid.css
+++ b/src/components/venuesGrid/VenuesGrid.css
@@ -1,3 +1,109 @@
-.venues-grid {
-  padding-top: 64px;
+.venues__grid {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding-top: 72px;
+  align-items: top;
+  justify-content: space-between;
+}
+.venues__grid::after {
+  content: "";
+  flex: auto;
+}
+
+
+
+
+.venue-card {
+  background-color: var(--color--white);
+  width: calc(25% - 6px);
+  border-radius: 16px;
+  cursor: pointer;
+  margin-top: 8px;
+}
+.venue-card:hover {
+  background-color: rgba( 0 0 0 / 0.04);
+}
+@media screen and (max-width: 1439px) {
+  .venue-card {
+    width: calc(33% - (16px / 3));
+  }
+}
+@media screen and (max-width: 1239px) {
+  .venue-card {
+    width: calc(33% - (16px / 3));
+  }
+}
+@media screen and (max-width: 904px) {
+  .venue-card:hover {
+    background-color: var(--color--white);
+  }
+}
+@media screen and (max-width: 599px) and (min-width: 2px) {
+  .venue--card {
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0px 16px;
+  }
+}
+
+
+
+
+
+.venue-card__photo__container {
+  padding: 8px;
+}
+@media screen and (max-width: 904px) {
+  .venue-card__photo__container {
+    padding: 0px;
+  }
+}
+
+
+
+
+.venue-card__photo {
+  width: 100%;
+  padding-top: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+
+
+
+.venue-card__info {
+  padding: 0px 8px 12px 8px;
+}
+
+
+
+
+.venue-card__title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* number of lines to show */
+          line-clamp: 1; 
+  -webkit-box-orient: vertical;
+  height: 19px;
+}
+
+
+
+
+.venue-card__address {
+  color: var(--color--light-black);
+  padding-top: 2px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+          line-clamp: 2; 
+  -webkit-box-orient: vertical;
+  height: 38px;
 }
