--- a/src/components/venuesGrid/VenuesGrid.css
+++ b/src/components/venuesGrid/VenuesGrid.css
@@ -16,6 +16,16 @@
     padding-top: 72px;
   }
 }
+@media screen and (max-width: 599px) and (min-width: 2px) {
+  .venues__grid {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0px;
+    padding-right: 0px;
+    grid-gap: 0px;
+    padding-top: 64px;
+  }
+}
 
 
 
@@ -39,6 +49,16 @@
   .venue-card {
     margin-top: 8px;
   }
+  @media screen and (max-width: 599px) and (min-width: 2px) {
+    .venue-card {
+      margin: 0px;
+      display: flex;
+      flex-direction: row;
+      padding: 0px;
+      width: 100%;
+      border-radius: 0px;
+    }
+  }
 }
 
 
@@ -50,9 +70,12 @@
 }
 @media screen and (max-width: 904px) {
   .venue-card__photo__container {
-    padding: 0px;
+    padding: 0px 0px 0px 16px;
+    display: flex;
+    align-items: center;
   }
 }
+
 
 
 
@@ -66,7 +89,13 @@
   border-radius: 8px;
   overflow: hidden;
 }
-
+@media screen and (max-width: 599px) and (min-width: 2px) {
+  .venue-card__photo {
+    width: 90px;
+    height: 90px;
+    padding-top: 0px;
+  }
+}
 
 
 
@@ -76,6 +105,19 @@
 @media screen and (max-width: 904px) {
   .venue-card__info {
     padding: 8px 0px 0px 0px;
+  }
+}
+@media screen and (max-width: 599px) and (min-width: 2px) {
+  .venue-card__info {
+    padding: 0px 16px 0px 0px;
+    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    height: 106px;
+    border-bottom: 1px solid var(--color--light-gray);
+    width: 100%;
   }
 }
 
@@ -89,7 +131,17 @@
   -webkit-line-clamp: 2; /* number of lines to show */
           line-clamp: 2; 
   -webkit-box-orient: vertical;
+  width: 100%
 }
+@media screen and (max-width: 599px) and (min-width: 2px) {
+  .venue-card__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+
 
 
 
@@ -103,4 +155,5 @@
   -webkit-line-clamp: 2; /* number of lines to show */
           line-clamp: 2; 
   -webkit-box-orient: vertical;
+  width: 100%;
 }
