weakly set up events grid

--- a/src/components/venuesGrid/VenuesGrid.css
+++ b/src/components/venuesGrid/VenuesGrid.css
@@ -70,7 +70,14 @@
 }
 @media screen and (max-width: 904px) {
   .venue-card__photo__container {
-    padding: 0px 0px 0px 16px;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 599px) and (min-width: 2px) {
+  .venue-card__photo__container {
+    padding-left: 16px;
     display: flex;
     align-items: center;
   }
